--- a/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.html
@@ -253,7 +253,7 @@
             </div>
             <div class="form-group">
               <label for="desc">Description</label>
-              <textarea rows="4" cols="60" name="desc" form="resultForm" id="desc" placeholder="enter description here..." [(ngModel)]="descriptionPost"></textarea>
+              <textarea class="form-control" rows="4" cols="50" name="desc" form="resultForm" id="desc" placeholder="enter description here..." [(ngModel)]="descriptionPost"></textarea>
             </div>
           </form>
         </div>
