changed the currency from $ to RON

--- a/PcBuilder.Client/src/app/modules/configurator/components/powerSupply/powerSupply.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/powerSupply/powerSupply.component.html
@@ -12,7 +12,7 @@
   <div class="footer">
       <div class="col-sm-12 footer_content">
         <div class="col-sm-3 footer-price">
-            <p><span class="total_price">Total: ${{currentTotalPrice | number : '1.2-2'}}</span></p>
+            <p><span class="total_price">Total:{{currentTotalPrice | number : '1.2-2'}} RON</span></p>
         </div>
         <div class="col-sm-6 footer-buttons">
             <button class="btn btn-warning" (click)="goToStorage()"> < Prev</button>
