--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/cpu-card/cpu-card.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/cpu-card/cpu-card.component.html
@@ -25,7 +25,7 @@
   </div>
   <div class="card__content">
     <div class="card__title"> {{cpu.title}}</div>
-    <p class="card__text">{{cpu.price}}$ </p>
+    <p class="card__text">{{cpu.price}}RON </p>
     <div class="buttons">
       <button class="btn btn--block card__btn" (click)="onSelect()">Select</button>
     </div>
