--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/motherboard-card/motherboard-card.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/motherboard-card/motherboard-card.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="card__content">
     <div class="card__title"> {{motherboard.title}}</div>
-    <p class="card__text">{{motherboard.price}}$ </p>
+    <p class="card__text">{{motherboard.price}}RON </p>
     <div class="buttons">
       <button class="btn btn--block card__btn" (click)="onSelect()">Select</button>
     </div>
