--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/powersupply-card/powersupply-card.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/powersupply-card/powersupply-card.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="card__content">
     <div class="card__title"> {{powersupply.title}}</div>
-    <p class="card__text">{{powersupply.price}}$ </p>
+    <p class="card__text">{{powersupply.price}}RON </p>
     <div class="buttons">
       <button class="btn btn--block card__btn" (click)="onSelect()">Select</button>
     </div>
