--- a/PcBuilder.Client/src/app/modules/core/components/community-result/community-result.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/community-result/community-result.component.html
@@ -28,7 +28,7 @@
           <!-- <span class="qt"><a  (click)="buy(case)">Buy</a></span> -->
           <button class="buy-btn" (click)="buy(case)">Buy</button>
           <h2 class="full-price">
-            {{case.price}}$
+            {{case.price}}RON
           </h2>
         </footer>
       </article>
@@ -55,7 +55,7 @@
           <button class="buy-btn" (click)="buy(cpu)">Buy</button>
   
           <h2 class="full-price">
-            {{cpu.price}}$
+            {{cpu.price}}RON
           </h2>
         </footer>
       </article>
@@ -82,7 +82,7 @@
           <button class="buy-btn" (click)="buy(cooler)">Buy</button>
   
           <h2 class="full-price">
-            {{cooler.price}}$
+            {{cooler.price}}RON
           </h2>
         </footer>
       </article>
@@ -109,7 +109,7 @@
           <button class="buy-btn" (click)="buy(motherboard)">Buy</button>
   
           <h2 class="full-price">
-            {{motherboard.price}}$
+            {{motherboard.price}}RON
           </h2>
         </footer>
       </article>
@@ -135,7 +135,7 @@
           <button class="buy-btn" (click)="buy(ram)">Buy</button>
   
           <h2 class="full-price">
-            {{ram.price}}$
+            {{ram.price}}RON
           </h2>
         </footer>
       </article>
@@ -161,7 +161,7 @@
           <button class="buy-btn" (click)="buy(videocard)">Buy</button>
   
           <h2 class="full-price">
-            {{videocard.price}}$
+            {{videocard.price}}RON
           </h2>
         </footer>
       </article>
@@ -187,7 +187,7 @@
           <button class="buy-btn" (click)="buy(storage)">Buy</button>
   
           <h2 class="full-price">
-            {{storage.price}}$
+            {{storage.price}}RON
           </h2>
         </footer>
       </article>
@@ -214,7 +214,7 @@
           <button class="buy-btn" (click)="buy(powersupply)">Buy</button>
   
           <h2 class="full-price">
-            {{powersupply.price}}$
+            {{powersupply.price}}RON
           </h2>
         </footer>
       </article>
@@ -229,7 +229,7 @@
       <div class="left"></div>
   
       <div class="right">
-        <h1 class="total">Total: <span>{{totalPrice | number : '1.2-2'}}</span>$</h1>
+        <h1 class="total">Total: <span>{{totalPrice | number : '1.2-2'}}</span>RON</h1>
         <a class="btn" style="color:white" (click)="back()">Back to community</a>
       </div>
   
