--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/ram-card/ram-card.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/ram-card/ram-card.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="card__content">
     <div class="card__title"> {{ram.title}}</div>
-    <p class="card__text">{{ram.price}}$ </p>
+    <p class="card__text">{{ram.price}}RON </p>
     <div class="buttons">
       <button class="btn btn--block card__btn" (click)="onSelect()">Select</button>
     </div>
