--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/storage-card/storage-card.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/storage-card/storage-card.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="card__content">
     <div class="card__title"> {{storage.title}}</div>
-    <p class="card__text">{{storage.price}}$ </p>
+    <p class="card__text">{{storage.price}}RON </p>
     <div class="buttons">
       <button class="btn btn--block card__btn" (click)="onSelect()">Select</button>
     </div>
