--- a/PcBuilder.Client/src/app/modules/core/components/community/community.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/community/community.component.html
@@ -23,7 +23,7 @@
     <div class="post-image">
       <img [src]="post.image" class="post-image" *ngIf="post.image">
 
-      <div class="post-price" *ngIf="post.price">{{post.price | number : '1.2-2'}} $</div>
+      <div class="post-price" *ngIf="post.price">{{post.price | number : '1.2-2'}} RON</div>
     </div>
     <div class="post-card">
 
