--- a/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
@@ -33,7 +33,7 @@
       <div class="row">
           <div class="col-md-12 text-center">
               <h1>
-                  <a href="https://www.youtube.com/watch?v=YOdWCEfzySY" class="youtube-media">
+                  <a href="https://youtu.be/sb8zzaQ8hMw" class="youtube-media">
                       <i class="fa fa-play-circle-o"></i> Watch the Video</a>
               </h1>
           </div>
