--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/cpu-card/cpu-card.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/cpu-card/cpu-card.component.css
@@ -25,10 +25,9 @@
 
 .card__title {
   color: #696969;
-  /* font-size: 1.25rem; */
-  /* font-weight: 300; */
   letter-spacing: 2px;
   text-transform: uppercase;
+  min-height: 48px;
 }
 .card__text {
   flex: 1 1 auto;
